--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <!-- TODO: Replace with our icon -->
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <!-- <link rel="icon" type="..." href="..." /> -->
+    <!-- <link rel="apple-touch-icon" href="/icon-192.png" /> -->
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="Pixelate your photo easily with LowResify." />
+    <title>LowResify</title>
   </head>
   <body>
     <div id="root"></div>
