--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pixelate your photo easily with LowResify." />
+    <meta name="theme-color" content="#2563eb" />
+    <meta http-equiv="Cache-Control" content="public, max-age=86400" />
+    <meta rel="manifest" href="/manifest.json" />
     <title>LowResify</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js');
+        });
+      }
+    </script>
   </body>
 </html>
