feat: Add website icons and update manifest

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- TODO: Replace with our icon -->
-    <!-- <link rel="icon" type="..." href="..." /> -->
-    <!-- <link rel="apple-touch-icon" href="/icon-192.png" /> -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="apple-touch-icon" href="/icons/icon-192.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pixelate your photo easily with LowResify." />
     <meta name="theme-color" content="#2563eb" />
     <meta http-equiv="Cache-Control" content="public, max-age=86400" />
     <meta rel="manifest" href="/manifest.json" />
-    <title>LowResify</title>
+    <title>LowResify • Pixelate your images</title>
   </head>
   <body>
     <div id="root"></div>
