--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pixelate your photo easily with LowResify." />
     <meta name="theme-color" content="#2563eb" />
     <meta http-equiv="Cache-Control" content="public, max-age=86400" />
-    <meta rel="manifest" href="/manifest.json" />
     <title>LowResify • Pixelate your images</title>
   </head>
   <body>
